<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chapter.ch4">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/ch4"
        app:titleTextColor="@color/text_view"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/scrollview_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar1"
        app:layout_constraintBottom_toTopOf="@id/adView">>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_ch4p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch4p2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p2"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch4p3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p3"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch4p4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p4"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/tv_ch4p5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p5"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch4p6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p6"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch4p7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p7"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch4p8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p8"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch4p9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p9"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch4p10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p10"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch4p11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p11"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch4p12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p12"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/tv_ch4p13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p13"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch4p14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p14"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch4p15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p15"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch4p16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p16"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/tv_ch4p17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p17"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch4p18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p18"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch4p19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p19"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch4p20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p20"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/tv_ch4p21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch4p21"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        ads:adUnitId="ca-app-pub-5803830864440853/2318132573">
    </com.google.android.gms.ads.AdView>
</androidx.constraintlayout.widget.ConstraintLayout>