<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chapter.ch9">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/ch9"
        app:titleTextColor="@color/text_view"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/scrollview_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar1"
        app:layout_constraintBottom_toTopOf="@id/adView">>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_ch9p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch9p1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch9p2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch9p2"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch9p3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch9p3"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch9p4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch9p4"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/tv_ch9p5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch9p5"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch9p6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch9p6"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch9p7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch9p7"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch9p8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch9p8"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch9p9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch9p9"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch9p10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch9p10"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch9p11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch9p11"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_ch9p12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch9p12"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/tv_ch9p13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_style1"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:textColor="@color/text"
                android:onClick="openChap"
                android:text="@string/ch9p13"
                android:textSize="24sp" />

            
        </LinearLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        ads:adUnitId="ca-app-pub-5803830864440853/2318132573">
    </com.google.android.gms.ads.AdView>
</androidx.constraintlayout.widget.ConstraintLayout>